# clv_prediction_ml_system

./: .gitignore  ASSIGNMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: api.py  db.py  training.py
models/current/: VERSION  metadata.json
test/: conftest.py  test_api.py  test_training.py
