[tool.poetry]
name = "ML-Challenge"
version = "0.0.1"
description = "ml engineering coding challenge"
readme = "README.md"
authors = ["you"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
sqlalchemy = "^1.3.18"
requests = "^2.25.1"
pandas = "^2.2.0"
scikit-learn = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
httpx = "^0.23.0"
ruff = "^0.4.0"

[tool.pytest.ini_options]
minversion = "6.0"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
